# openlam

./: .gitignore  README.md  pyproject.toml  requirement.txt
examples/: wf.json
examples/data/: MP_mp-1006815.cif  MP_mp-1093779.cif
lam_crystal_philately.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lam_optimize/: __init__.py  _version.py  db.py  entrypoint.py  main.py  relaxer.py  utils.py  workflow.py
